--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "scuttlebot": "^7.3.4",
     "ssb-client": "^4.5.7",
     "ssb-config": "^2.2.0",
-    "ssb-keys": "^7.0.13",
-    "tape": "^4.2.0"
+    "ssb-keys": "^7.0.13"
   },
   "devDependencies": {},
   "author": "David Winn <q@qypea.com>",
