--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "scuttlebot": "^7.3.4",
     "ssb-client": "^4.5.7",
     "ssb-config": "^2.2.0",
-    "ssb-keys": "^7.0.13"
+    "ssb-keys": "^7.0.13",
+    "pull-stream": "^3.6.8"
   },
   "devDependencies": {},
   "author": "David Winn <q@qypea.com>",
