--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "url": "https://github.com/qypea/ssb-graph.git"
   },
   "dependencies": {
-    "scuttlebot": "^7.3.4",
+    "scuttlebot": "^11.3.3",
     "ssb-client": "^4.5.7",
     "ssb-config": "^2.2.0",
+    "ssb-friends": "^2.4.0",
     "ssb-keys": "^7.0.13",
     "pull-stream": "^3.6.8"
   },
